--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-tailwindcss-datepicker": "^1.6.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
